# lager_app_template

./: .gitignore  CMakeLists.txt  flake.nix
pkgs/cereal/: default.nix
pkgs/imgui/: default.nix
pkgs/immer/: default.nix
pkgs/lager/: default.nix
pkgs/zug/: default.nix
src/: main.cpp
